--- a/config/content.htm
+++ b/config/content.htm
@@ -190,7 +190,115 @@
 <h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-3.py">房子</a></h4>
 <p><strong><code></code></strong></p>
 <p></p>
-<p></p><h1>HW 2</h1>
+<p></p><h3>w13_hw</h3>
+<p>1.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/9f17932f49ca2f3811bdbd379ac161283a0fec00/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
+<div id="brython_div1">2.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/821ee6f0f80d56e73815636fcfcb1bcf618aa1bb/w13-2.py">加上外切圓</a></div>
+<!-- 導入 brython 程式庫 -->
+<p>
+<script src="/static/brython.js"></script>
+<script src="/static/brython_stdlib.js"></script>
+</p>
+<!-- 啟動 Brython -->
+<p>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+<script type="text/python3">
+from browser import html
+from browser import document as doc
+import math
+
+# 利用 html 建立 canvas 超文件物件
+canvas = html.CANVAS(width=600, height=600)  # 調整畫布大小以容納圓形
+brython_div = doc["brython_div1"]
+brython_div <= canvas
+
+ctx = canvas.getContext("2d")
+
+grid_size = 1
+point_size = max(int(grid_size/2), 1)
+ctx.lineWidth = 1
+
+# 1. 繪製兩個矩形 (紅色邊框)
+ctx.strokeStyle = 'red'  # 設定矩形的邊框顏色為紅色
+ctx.beginPath()
+ctx.rect(100, 100, 200, 200)  # 第一個正方形的左上角在(100, 100)，邊長200
+ctx.rect(200, 200, 200, 200)  # 第二個正方形的左上角在(200, 200)，邊長200
+ctx.stroke()
+
+# 2. 繪製對角線 (藍色) - 只連接第一個矩形的左上角和第一個矩形的右下角
+ctx.strokeStyle = 'blue'  # 設定對角線顏色為藍色
+ctx.beginPath()
+ctx.moveTo(100, 100)  # 起點為第一個矩形的左上角 (100, 100)
+ctx.lineTo(300, 300)  # 終點為第一個矩形的右下角 (300, 300)
+ctx.stroke()
+
+# 3. 繪製兩個外切圓 (黑色)
+ctx.strokeStyle = 'black'  # 設定圓的顏色為黑色
+</script>
+</p>
+<!-- 導入 brython 程式庫 -->
+<p>
+<script src="/static/brython.js"></script>
+<script src="/static/brython_stdlib.js"></script>
+</p>
+<!-- 啟動 Brython -->
+<p>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+<script type="text/python3">
+from browser import html
+from browser import document as doc
+import math
+
+# 利用 html 建立 canvas 超文件物件
+canvas = html.CANVAS(width=600, height=600)  # 調整畫布大小以容納圓形
+brython_div = doc["brython_div1"]
+brython_div <= canvas
+
+ctx = canvas.getContext("2d")
+
+grid_size = 1
+point_size = max(int(grid_size/2), 1)
+ctx.lineWidth = 1
+
+# 計算對角線長度 (200 * sqrt(2))，並計算外切圓半徑
+side_length = 200
+radius = side_length * math.sqrt(2) / 2  # 外切圓半徑
+
+# 1. 繪製兩個矩形 (紅色邊框)
+ctx.strokeStyle = 'red'  # 設定矩形的邊框顏色為紅色
+ctx.beginPath()
+ctx.rect(100, 100, side_length, side_length)  # 第一個正方形
+ctx.rect(200, 200, side_length, side_length)  # 第二個正方形
+ctx.stroke()
+
+# 2. 繪製對角線 (藍色) - 只連接第一個矩形的左上角和第一個矩形的右下角
+ctx.strokeStyle = 'blue'  # 設定對角線顏色為藍色
+ctx.beginPath()
+ctx.moveTo(100, 100)  # 起點為第一個矩形的左上角 (100, 100)
+ctx.lineTo(300, 300)  # 終點為第一個矩形的右下角 (300, 300)
+ctx.stroke()
+
+# 3. 繪製兩個外切圓 (黑色)
+ctx.strokeStyle = 'black'  # 設定圓的顏色為黑色
+
+# 第一個正方形的圓 (圓心為 (200, 200))
+ctx.beginPath()
+ctx.arc(200, 200, radius, 0, 2 * math.pi)  # 圓心在正方形的中心 (200, 200)
+ctx.stroke()
+
+# 第二個正方形的圓 (圓心為 (300, 300))
+ctx.beginPath()
+ctx.arc(300, 300, radius, 0, 2 * math.pi)  # 圓心在正方形的中心 (300, 300)
+ctx.stroke()
+</script>
+</p><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
