--- a/content/w13_hw.html
+++ b/content/w13_hw.html
@@ -141,28 +141,115 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w12_hw.html'>Next</a> >> w12_hw<br /><h1>w11_hw</h1>
-<p><span>題目一 </span><span>請將此程式延伸到可以在 10x10 的字元區域中, 以 "*" 字元列印出圓型區域. 完成後請將程式碼存入個人 Gist 後, 直接在個人作業網站中的 Brython 頁面中執行. (提示: ?src=gist_script_URL)</span></p>
-<p><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/d63a0ccfc5107f3f5ee7886a36bf81343652eb45/w11.py">第1題的Brython頁面</a></p>
-<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/t2XCfFZqARI?si=qhhYbcYlakHJ0MVN" title="YouTube video player" width="560"></iframe></span></p>
-<p><span></span></p>
-<div></div>
-<div><span>題目二 已知可以在網頁中利用 Brython 繪製方格與塗色, 如下連結, 請設法修改此一程式, 直接將程式存入個人的 Gist, 並利用黑色方塊圍出一個圓形區域.</span></div>
-<div>
-<div></div>
-<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/d63a0ccfc5107f3f5ee7886a36bf81343652eb45/w11-2.py">第2題的Brython頁面</a></div>
-<div><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/d63a0ccfc5107f3f5ee7886a36bf81343652eb45/w11-2.py"></a></div>
-<div><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xUDOogstcIk?si=3txJvMz8Gt3x5W28" title="YouTube video player" width="560"></iframe></span></div>
-<div><br/><span></span></div>
-<div>
-<p><span>心得:</span></p>
-<p><span>這次作業我發現給gpt一個正確的關鍵字非常重要，前面好幾次我做出來的圓都是不規則形狀的，後來發現是*的字形必須是全形才能做出一個完整的圓。</span></p>
-<p><span></span></p>
-<p><span>3.</span></p>
-<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/6460a0203b0b39e7c7fe691110a0d6162f49581f/w11-3.py">11/27程式1</a></div>
-<div></div>
-<div><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/e22aa724394fd79c1da76e3b316dd2a7b22af4f7/w11-4.py">11/27程式2</a></div>
-<div></div><br />w10 << <a href='w10.html'>Previous</a> <a href='w12_hw.html'>Next</a> >> w12_hw</div>
+    <div id="tipue_search_content">w12_hw << <a href='w12_hw.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w13_hw</h1>
+<p>1.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/9f17932f49ca2f3811bdbd379ac161283a0fec00/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
+<div id="brython_div1">2.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/821ee6f0f80d56e73815636fcfcb1bcf618aa1bb/w13-2.py">加上外切圓</a></div>
+<!-- 導入 brython 程式庫 -->
+<p>
+<script src="./../cmsimde/static/brython.js"></script>
+<script src="./../cmsimde/static/brython_stdlib.js"></script>
+</p>
+<!-- 啟動 Brython -->
+<p>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+<script type="text/python3">
+from browser import html
+from browser import document as doc
+import math
+
+# 利用 html 建立 canvas 超文件物件
+canvas = html.CANVAS(width=600, height=600)  # 調整畫布大小以容納圓形
+brython_div = doc["brython_div1"]
+brython_div <= canvas
+
+ctx = canvas.getContext("2d")
+
+grid_size = 1
+point_size = max(int(grid_size/2), 1)
+ctx.lineWidth = 1
+
+# 1. 繪製兩個矩形 (紅色邊框)
+ctx.strokeStyle = 'red'  # 設定矩形的邊框顏色為紅色
+ctx.beginPath()
+ctx.rect(100, 100, 200, 200)  # 第一個正方形的左上角在(100, 100)，邊長200
+ctx.rect(200, 200, 200, 200)  # 第二個正方形的左上角在(200, 200)，邊長200
+ctx.stroke()
+
+# 2. 繪製對角線 (藍色) - 只連接第一個矩形的左上角和第一個矩形的右下角
+ctx.strokeStyle = 'blue'  # 設定對角線顏色為藍色
+ctx.beginPath()
+ctx.moveTo(100, 100)  # 起點為第一個矩形的左上角 (100, 100)
+ctx.lineTo(300, 300)  # 終點為第一個矩形的右下角 (300, 300)
+ctx.stroke()
+
+# 3. 繪製兩個外切圓 (黑色)
+ctx.strokeStyle = 'black'  # 設定圓的顏色為黑色
+</script>
+</p>
+<!-- 導入 brython 程式庫 -->
+<p>
+<script src="./../cmsimde/static/brython.js"></script>
+<script src="./../cmsimde/static/brython_stdlib.js"></script>
+</p>
+<!-- 啟動 Brython -->
+<p>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+<script type="text/python3">
+from browser import html
+from browser import document as doc
+import math
+
+# 利用 html 建立 canvas 超文件物件
+canvas = html.CANVAS(width=600, height=600)  # 調整畫布大小以容納圓形
+brython_div = doc["brython_div1"]
+brython_div <= canvas
+
+ctx = canvas.getContext("2d")
+
+grid_size = 1
+point_size = max(int(grid_size/2), 1)
+ctx.lineWidth = 1
+
+# 計算對角線長度 (200 * sqrt(2))，並計算外切圓半徑
+side_length = 200
+radius = side_length * math.sqrt(2) / 2  # 外切圓半徑
+
+# 1. 繪製兩個矩形 (紅色邊框)
+ctx.strokeStyle = 'red'  # 設定矩形的邊框顏色為紅色
+ctx.beginPath()
+ctx.rect(100, 100, side_length, side_length)  # 第一個正方形
+ctx.rect(200, 200, side_length, side_length)  # 第二個正方形
+ctx.stroke()
+
+# 2. 繪製對角線 (藍色) - 只連接第一個矩形的左上角和第一個矩形的右下角
+ctx.strokeStyle = 'blue'  # 設定對角線顏色為藍色
+ctx.beginPath()
+ctx.moveTo(100, 100)  # 起點為第一個矩形的左上角 (100, 100)
+ctx.lineTo(300, 300)  # 終點為第一個矩形的右下角 (300, 300)
+ctx.stroke()
+
+# 3. 繪製兩個外切圓 (黑色)
+ctx.strokeStyle = 'black'  # 設定圓的顏色為黑色
+
+# 第一個正方形的圓 (圓心為 (200, 200))
+ctx.beginPath()
+ctx.arc(200, 200, radius, 0, 2 * math.pi)  # 圓心在正方形的中心 (200, 200)
+ctx.stroke()
+
+# 第二個正方形的圓 (圓心為 (300, 300))
+ctx.beginPath()
+ctx.arc(300, 300, radius, 0, 2 * math.pi)  # 圓心在正方形的中心 (300, 300)
+ctx.stroke()
+</script>
+</p><br />w12_hw << <a href='w12_hw.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
