--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -298,7 +298,8 @@ ctx.beginPath()
 ctx.arc(300, 300, radius, 0, 2 * math.pi)  # 圓心在正方形的中心 (300, 300)
 ctx.stroke()
 </script>
-</p><h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">w14_ex</span></span></h3>
+</p><h3>w14_ex</h3>
+<p><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/7e33a7b1ccc2549d7537a500ad513c92/raw/6767cfdb408aa2195a4be5f5e0837d9f51159097/w14.py"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">三圓的著色</span></span></a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from browser import html
 from browser import document as doc
 import random
@@ -424,9 +425,8 @@ x3, y3, r3 = 200, 100, 100  # 圓3：圓心 (200, 100)，半徑 100
 
 # 呼叫畫圓函式，並繪製三個圓
 draw_circles(x1, y1, r1, x2, y2, r2, x3, y3, r3)
-</pre>
-<p><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/7e33a7b1ccc2549d7537a500ad513c92/raw/6767cfdb408aa2195a4be5f5e0837d9f51159097/w14.py"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">三圓的著色</span></span></a></p>
-<p></p><h1>HW 2</h1>
+</pre><h3>w15</h3>
+<h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
