--- a/content/w15.html
+++ b/content/w15.html
@@ -143,7 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w14_ex << <a href='w14_ex.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w15</h1>
 <p><span>題目一: <a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/0feaa8b307192eaf6d43d5df00cd741a/raw/0e1fb4bca5e7299679da0edcb9e310dad261e8d1/w15.py">從 1 累加到 100</a></span></p>
-<p><span>題目二:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/0feaa8b307192eaf6d43d5df00cd741a/raw/f90ee0d3b66192983e22407cde9e8cb3b1666452/w15-2.py">addto</a></span></p><br />w14_ex << <a href='w14_ex.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
+<p><span>題目二:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/0feaa8b307192eaf6d43d5df00cd741a/raw/f90ee0d3b66192983e22407cde9e8cb3b1666452/w15-2.py">addto</a></span></p>
+<p><span>題目三:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/0feaa8b307192eaf6d43d5df00cd741a/raw/0aed525a9156aea08d617db6d89ad6e9d203e18a/w15-3.py">add_only_even</a></span></p><br />w14_ex << <a href='w14_ex.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
